--- a/package.json
+++ b/package.json
@@ -1,12 +1,17 @@
 {
   "name": "browserify-ng-html2js",
   "version": "0.0.0",
-  "description": "",
+  "description": "Browserify transform to compile angular templates into angular modules",
   "main": "index.js",
   "scripts": {
     "test": "node_modules/.bin/mocha test/spec.js"
   },
-  "author": "dahl.jonatan@gmail.com",
+  "author": "Jonatan Dahl <dahl.jonatan@gmail.com>",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/javoire/browserify-ng-html2js.git"
+  },
+  "homepage": "https://github.com/javoire/browserify-ng-html2js",
   "license": "MIT",
   "dependencies": {
     "through": "~2.3.4",
